# EEG-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: description.txt
docs/: EBS_FORMAT.md  architecture.md
scala-streaming/: build.sbt
scala-streaming/src/main/scala/org/neurofeedbacklab/: EegStreamProcessor.scala
src/: dl_models.py  errp_feedback.py  lsl_stream.py  preprocess_eeg.py  read_edf.py  realtime_classifier.py  rl_bandit.py  simulate_eeg.py
