[build-system]
requires = ["setuptools>=61.0"] # Specify minimum setuptools version
build-backend = "setuptools.build_meta"

[project]
name = "psg-eeg-processor" # Replace with your actual project name
version = "0.1.0"
description = "A project to process EEG data from PSG recordings." # Add a brief description
readme = "README.md" # Optional: if you plan to have a README
requires-python = ">=3.8" # Specify compatible Python versions
